objects/Account_Entitlements__c/Account_Entitlements__c.object-meta.xml
<CustomObject>
    <description>Consolidates all of a customer’s entitlements in a single object. Populated from Subscriptions and POC Requests. Jira ticket SS-10388</description>
    <label>Account Entitlements</label>
    <nameField>
        <displayFormat>AE-{000000}</displayFormat>
        <label>Account Entitlements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>