objects/Account_Entitlements__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links this entitlement to the customer&apos;s account record.  Jira ticket SS-10388</description>
    <inlineHelpText>Links this entitlement to the customer&apos;s account record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Entitlements</relationshipLabel>
    <relationshipName>Account_Entitlements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>