objects/Account_Entitlements__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
   TODAY() &gt;= Start_Date__c,
   TODAY() &lt;= End_Date__c,
   Quantity_Purchased__c &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>