objects/Account_Entitlements__c/fields/ELV_Source__c.field-meta.xml
<CustomField>
    <fullName>ELV_Source__c</fullName>
    <description>A hyperlink to the source record from which the Account Entitlement was created</description>
    <formula>IF(NOT(ISBLANK(Source_NFR__c)), HYPERLINK(&apos;/&apos; &amp; Source_NFR__c, Source_NFR__r.Name), IF(NOT(ISBLANK(Source_POC_Request__c)), HYPERLINK(&apos;/&apos; &amp; Source_POC_Request__c, Source_POC_Request__r.Name), IF(NOT(ISBLANK(ELV_Source_Subscription__c)), HYPERLINK(&apos;/&apos; &amp; ELV_Source_Subscription__c, ELV_Source_Subscription__r.Name), NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A hyperlink to the source record from which the Account Entitlement was created</inlineHelpText>
    <label>Source</label>
    <type>Text</type>
</CustomField>