objects/Account_Entitlements__c/fields/ELV_Source_Subscription__c.field-meta.xml
<CustomField>
    <fullName>ELV_Source_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this entitlement to the customer&apos;s Subscription record. Jira ticket SS-10388. Requires automation/migration to populate.</description>
    <inlineHelpText>Links this entitlement to the customer&apos;s Subscription record.</inlineHelpText>
    <label>Source (Subscription)</label>
    <referenceTo>Ruby__Subscription__c</referenceTo>
    <relationshipLabel>Account Entitlements (Source Subscription)</relationshipLabel>
    <relationshipName>Account_Entitlements_Source_Sub</relationshipName>
    <type>Lookup</type>
</CustomField>