objects/Account_Entitlements__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The End Date of the Entitlement.  Jira ticket SS-10388</description>
    <inlineHelpText>The End Date of the Entitlement.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>