objects/Account_Entitlements__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this entitlement to the Product Module related to the POC or Subscription.  Jira ticket SS-10388</description>
    <inlineHelpText>Links this entitlement to the Product Module related to the POC or Subscription.</inlineHelpText>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Account Entitlements</relationshipLabel>
    <relationshipName>Account_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>