objects/Account_Entitlements__c/fields/POC_Module__c.field-meta.xml
<CustomField>
    <fullName>POC_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this entitlement to the POC Request for the customer.  Jira ticket SS-10388</description>
    <inlineHelpText>Links this entitlement to the POC Request for the customer.</inlineHelpText>
    <label>POC Module</label>
    <referenceTo>POC_Module__c</referenceTo>
    <relationshipLabel>Account Entitlements</relationshipLabel>
    <relationshipName>Account_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>