objects/Account_Entitlements__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this entitlement to the Product record. Jira ticket SS-10388</description>
    <inlineHelpText>Links this entitlement to the Product record.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Account Entitlements</relationshipLabel>
    <relationshipName>Account_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>