objects/Account_Entitlements__c/fields/Product_Sold_by_Credits__c.field-meta.xml
<CustomField>
    <fullName>Product_Sold_by_Credits__c</fullName>
    <description>When this box is checked, it indicates that the Product for this record is sold by Credits. The Quantity of Credits for the product is reflected in the Quantity field. Jira ticket SS-12597.</description>
    <formula>TEXT(Product__r.LicenseMetric__c) = &apos;Credits&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When this box is checked, it indicates that the Product for this record is sold by Credits. The Quantity of Credits for the product is reflected in the Quantity field.</inlineHelpText>
    <label>Product Sold by Credits</label>
    <type>Checkbox</type>
</CustomField>