objects/Account_Entitlements__c/fields/Quantity_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Allocated__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>The amount of modules that have been licensed to the customer.  Jira ticket SS-10388</description>
    <inlineHelpText>The amount of modules that have been licensed to the customer.</inlineHelpText>
    <label>Quantity Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>