objects/Account_Entitlements__c/fields/Quantity_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Purchased__c</fullName>
    <description>The amount of modules that have been purchased or given to the customer.  Jira ticket SS-10388</description>
    <inlineHelpText>The amount of modules that have been purchased or given to the customer. If the product is sold by credits, then this will represent the number of credits that will be issued to the customer.</inlineHelpText>
    <label>Quantity Purchased</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>