objects/Account_Entitlements__c/fields/Source_NFR__c.field-meta.xml
<CustomField>
    <fullName>Source_NFR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this entitlement to the customer&apos;s NFR record.  Jira ticket SS-10388</description>
    <inlineHelpText>Links this entitlement to the customer&apos;s NFR record.</inlineHelpText>
    <label>Source (NFR)</label>
    <referenceTo>NFR__c</referenceTo>
    <relationshipLabel>Account Entitlements</relationshipLabel>
    <relationshipName>Account_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>