objects/Account_Entitlements__c/fields/Source_POC_Request__c.field-meta.xml
<CustomField>
    <fullName>Source_POC_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this entitlement to the customer&apos;s POC Request record.  Jira ticket SS-10388</description>
    <inlineHelpText>Links this entitlement to the customer&apos;s POC Request record.</inlineHelpText>
    <label>Source (POC Request)</label>
    <referenceTo>POC_Request__c</referenceTo>
    <relationshipLabel>Account Entitlements</relationshipLabel>
    <relationshipName>Account_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>