objects/Account_Entitlements__c/fields/Source_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Source_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this entitlement to the customer&apos;s Subscription record.  Jira ticket SS-10388</description>
    <inlineHelpText>Links this entitlement to the customer&apos;s Subscription record.</inlineHelpText>
    <label>CPQ Source (Subscription)</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Account Entitlements</relationshipLabel>
    <relationshipName>Account_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>