objects/Account_Entitlements__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The Start Date of the Entitlement.  Jira ticket SS-10388</description>
    <inlineHelpText>The Start Date of the Entitlement.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>