objects/Account_Entitlements__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of record  that created this record.  Jira ticket SS-10388</description>
    <inlineHelpText>The type of record  that created this record.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>NFR</fullName>
            </value>
            <value>
                <fullName>POC Request</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>