objects/Account_Entitlements__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Active__c</columns>
    <columns>Module__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>